--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <span></span>
             <span></span>
             <div class="menu">
-                <li><a href="#">Noi</a></li>
-                <li><a href="#">Corsi</a></li>
-                <li><a href="#">Sedi</a></li>
-                <li><a href="#">Eventi</a></li>
-                <li><a href="#">Tips</a></li>
+                <li id="menu1"><a href="#">Noi</a></li>
+                <li id="menu1"><a href="#">Corsi</a></li>
+                <li id="menu1"><a href="#">Sedi</a></li>
+                <li id="menu1"><a href="#">Eventi</a></li>
+                <li id="menu1"><a href="#">Tips</a></li>
             </div>
         </div>
         <img src="./logo.jpg" />
     </div>
-    
+
     <div class="grid-container" style="margin-top:2%;">
         <h1 class="my-h1">Tango Argentino</h1>
     </div>
@@ -39,7 +39,7 @@
             Vivi con noi la passione per il Tango Argentino
         </div>
     </div>
-    <hr style="margin-top: 5%;"/>
+    <hr style="margin-top: 5%;" />
     <div class="grid-container">
         <div style="margin:2%;" class="my-h1"> Contattaci:</div>
     </div>
@@ -48,5 +48,12 @@
         <a class="fa fa-facebook"></a>
         <a class="fa fa-instagram"></a>
     </div>
-    <hr style="width: 35%"/>
+    <hr style="width: 35%" />
+
+
+    <script src="fittext.js"></script>
+    <script type="text/javascript">
+        fitText(document.getElementById('menu1'), 0.15);
+    </script>
+
 </body>
