--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <span></span>
             <span></span>
             <div class="menu">
-                <li id="menu1"><a href="#">Noi</a></li>
-                <li id="menu1"><a href="#">Corsi</a></li>
-                <li id="menu1"><a href="#">Sedi</a></li>
-                <li id="menu1"><a href="#">Eventi</a></li>
-                <li id="menu1"><a href="#">Tips</a></li>
+                <li><a href="#">Noi</a></li>
+                <li><a href="#">Corsi</a></li>
+                <li><a href="#">Sedi</a></li>
+                <li><a href="#">Eventi</a></li>
+                <li><a href="#">Tips</a></li>
             </div>
         </div>
         <img src="./logo.jpg" />
