--- a/index.html
+++ b/index.html
@@ -13,47 +13,117 @@
 </head>
 
 <body id="main">
+    <script>
+        var open = 0;
+        var width = window.innerWidth
+            || document.documentElement.clientWidth
+            || document.body.clientWidth;
+        function openMenu() {
+            if (open == 0) {
+                var dim = (width * 25) / 100;
+                open = 1;
+                document.getElementById('ics').style.width = dim + 'px';
+                document.getElementById('scritte').style.width = dim / 4 + 'px';
+            }
 
-    <div class="my-body">
-        <div class="nav">
-            <input type="checkbox">
-            <span></span>
-            <span></span>
-            <div class="menu">
-                <li><a href="#">Noi</a></li>
-                <li><a href="#">Corsi</a></li>
-                <li><a href="#">Sedi</a></li>
-                <li><a href="#">Eventi</a></li>
-                <li><a href="#">Tips</a></li>
+            else if (open == 1) {
+                open = 0;
+                document.getElementById('ics').style.width = "0px";
+                document.getElementById('scritte').style.width = '0px';
+
+            }
+        }
+
+    </script>
+    <div class="first">
+        <div class="my-body">
+            <div class="nav">
+                <input type="checkbox" onclick="openMenu()">
+                <span></span>
+                <span></span>
+                <div class="menu" id="ics">
+                    <a href="#">Noi</a>
+                    <a href="#">Corsi</a>
+                    <a href="#">Sedi</a>
+                    <a href="#">Eventi</a>
+                    <a href="#">Tips</a>
+                </div>
+            </div>
+            <img src="./logo.jpg" />
+        </div>
+
+        <div class="grid-container" style="margin-top:2%; grid-template-columns: 50%;">
+            <h1 class="my-h1">Scuola di Tango Argentino</h1>
+        </div>
+        <div class="grid-container">
+            <div style="font-size: 100%;">
+                "I nostri piedi sono come i pennelli di un pittore. Con essi dipingiamo la musica" - Carlos Gavito<br><br>
+                Vivi con noi la passione per il Tango Argentino
             </div>
         </div>
-        <img src="./logo.jpg" />
+        <hr class="my-hr" style="margin-top: 5%;" />
+        <div class="grid-container">
+            <div style="margin:2%;" class="my-h1"> Contattaci:</div>
+        </div>
+        <div class="grid-container-icons">
+            <a class="fa fa-whatsapp"></a>
+            <a class="fa fa-facebook"></a>
+            <a class="fa fa-instagram"></a>
+        </div>
+        <hr class="my-hr" style="width: 35%" />
     </div>
+    <hr style="margin: 0; border-color: red;" />
+    <div class="second">
+        <div class="black-div">
+            <div class="titles">Perchè scegliere noi?</div>
+            <div class="center-text" style="margin-bottom: 5%;">Perché siamo una Accademia di Tango Argentino con più di 20 anni di esperienza,<br /> riconosciuti come ballerini e maestri a livello internazionale.</div>
 
-    <div class="grid-container" style="margin-top:2%;">
-        <h1 class="my-h1">Tango Argentino</h1>
-    </div>
-    <div class="grid-container">
-        <div style="font-size: 100%;">
-            "I nostri piedi sono come i pennelli di un pittore. Con essi dipingiamo la musica" - Carlos Gavito<br><br>
-            Vivi con noi la passione per il Tango Argentino
+            <div class="grid-container-circles">
+
+                <div class="card" style="background: url('./ambiente.jpg');">
+                    <div class="titles" style="margin-top: 25%;">Ambiente</div>
+                    <div class="center-text">Vieni a imparare e vivere la passione del Tango Argentino con noi. Non dimenticherai la esperienza di ballare e conoscere tante persone.</div>
+                </div>
+                <div class="card" style="background: url('./qualita.jpg');">
+                    <div class="titles" style="margin-top: 25%;">Qualità</div>
+                    <div class="center-text">Qualità tecnica maschile, femminile e di coppia, metodologia e pedagogia nel modo di proporre i movimenti e la musicalità, istoria e codici del ballo e la milonga.</div>
+                </div>
+                <div class="card" style="background: url('./divertimento.jpg');">
+                    <div class="titles" style="margin-top: 25%;">Divertimento</div>
+                    <div class="center-text">Il Tango non è solo un ballo, è anche tanto altro, musica, storia, cultura, socialità, divertimento, passione e processo che inizia a casa come un rito.</div>
+                </div>
+            </div>
         </div>
     </div>
-    <hr style="margin-top: 5%;" />
-    <div class="grid-container">
-        <div style="margin:2%;" class="my-h1"> Contattaci:</div>
-    </div>
-    <div class="grid-container-icons">
-        <a class="fa fa-whatsapp"></a>
-        <a class="fa fa-facebook"></a>
-        <a class="fa fa-instagram"></a>
-    </div>
-    <hr style="width: 35%" />
+
+    <footer class="site-footer" id="foot">
+        <hr>
+        <div class="row">
+            <h6 class="my-h1" style="margin: 0;">NATango </h6>
+            <h5>Le nostre sedi</h5>
+
+            <p>Via dei Cessati Spiriti 89, Roma (Colli Albani) GOTAN CLUB</p>
+            <p>Via del Mandrione 109, Roma (Tuscolana) TANGO LOFT</p>
+            <p>Via Antonio Serra 93b, Roma (Flaminio) CENTRO U.N.L.A. Roma Nord</p>
+
+        </div>
+        <div class="row">
+            <h5>Chiamaci</h5>
+            <a href="tel:3392737619">
+                3392737619
+            </a>
+            <a style="margin: 2%;" href="tel:31078263">
+                31078263
+            </a>
+            <a href="tel:067825384">
+                067825384
+            </a>
+            <ul class="social-icons">
+                <a class="facebook" href=""></a>
+                <a class="instagram" href=""></a>
+            </ul>
 
 
-    <script src="fittext.js"></script>
-    <script type="text/javascript">
-        fitText(document.getElementById('menu1'), 0.15);
-    </script>
-
+        </div>
+    </footer>
 </body>
