--- a/index.html
+++ b/index.html
@@ -95,6 +95,54 @@
             </div>
         </div>
     </div>
+    <hr style="margin: 0; border-color: red;" />
+    <div class="third">
+        <hr class="my-hr-1" style="margin-top: 5%;">
+        <div class="titles">Conosci il nostro Team</div>
+        <div class="center-text">''Un pezzetto di Buenos Aires'' Tutto comincia facendo il primo passo... <br />Maestri, Staff ed allievi avanzati ci aiutano a seguire ogni uno di voi</div>
+        <hr class="my-hr-1" style="margin-bottom: 5%;">
+        <div class="grid-container-card">
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <img src="./francesca.png" />
+            </div>
+            <div>
+                <div class="titles">Francesca del Buono</div>
+                MAESTRA E BALLERINA DI TANGO ARGENTINO<br />
+                Francesca Del Buono, una bellissima ed affermata ballerina di Tango, nota a Roma anche come maestra ma aprezzata anche a livello nazionale e internazionale per le sue performaces con il suo compagno Santiago Castro. Si forma in ambito classico, poi approfondisce i suoi studi sul Tango che diventa una passione che la porta a spaziare tra i vari stili ed innovazioni. Elegantissima e affascinate nel ballo che riesce a coinvolgere lo spettatore.
+                <br />
+                <a class="link" href="#">Scopri di più..</a>
+            </div>
+        </div>
+        <div class="grid-container-card">
+            <div>
+                <div class="titles">Santiago Castro</div>
+                MAESTRO E BALLERINO DI TANGO ARGENTINO<br />
+                Milonguero perché il tango è la mia vita, non posso passare una giornata senza ascoltarlo e ballare, mi piace il tango di abbraccio chiuso che viene ballato nelle milonghe del mondo.
+                Mi piace improvvisare il tango come la coreografia, conoscere il corpo, l'energia e i sentimenti che possiamo trasmettere ed esprimere con il nostro essere.
+                La mia filosofia è saper camminare, abbracciare e ascoltare, l piacere di ballare e l’amore per l’insegnamento.
+                <br />
+                <a class="link" href="#">Scopri di più..</a>
+
+            </div>
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <img src="./santiago.png" style="display: flex; justify-content: center; align-items: center;" />
+            </div>
+        </div>
+        <div class="grid-container-card">
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <img src="./staff.png" style="display: flex; justify-content: center; align-items: center;" />
+            </div>
+
+            <div>
+                <div class="titles">Lo staff</div>
+                GLI ASSISTENTI DELLA ACCADEMIA NATANGO<br />
+                Lo Staff della Nuova Accademia del Tango coadiuva il lavoro dei maestri assistendovi durante le lezioni e durante le pratiche.
+                <br />
+                <a class="link" href="#">Scopri di più..</a>
+            </div>
+        </div>
+    </div>
+    <hr style="margin: 0; border-color: red;" />
 
     <footer class="site-footer" id="foot">
         <hr>
@@ -122,8 +170,6 @@
                 <a class="facebook" href=""></a>
                 <a class="instagram" href=""></a>
             </ul>
-
-
         </div>
     </footer>
 </body>
