--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Franz Steiner,Tulipani Bianchi, Fiorista, Matrimonio,arredo casa da sogno,floreale">-->
     <link rel="stylesheet" href="style.css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link href="./lightbox2-2.11.3/src/css/lightbox.css" rel="stylesheet" />
 
 </head>
 
@@ -152,12 +152,44 @@
     </div>
     <hr style="margin: 0; border-color: red;" />
     <div class="fourth">
-        <div class="your-class">
-            <div>your content</div>
-            <div>your content</div>
-            <div>your content</div>
+        <div class="grid-container-three">
+            <div>
+                <div class="center-text">
+                    <img src="gotan-logo.png">
+                </div>
+                <div class="didascalie">
+                    Le nostre sale sono disponibili per corsi, attività artistiche ed eventi privati.<br />
+                    Contattateci per scoprire gli spazi e il programma delle attività, oppure per proporre le vostre idee!<br />
+                    Info: 3293593147 – 067825384
+                </div>
+
+                <a href="./locali/gotan01.jpg" data-lightbox="gotan"><img src="./locali/gotan01.jpg"></a>
+                <a href="./locali/gotan02.jpg" data-lightbox="gotan"></a>
+                <a href="./locali/gotan03.jpg" data-lightbox="gotan"></a>
+                <a href="./locali/gotan04.jpg" data-lightbox="gotan"></a>
+                <a href="./locali/gotan05.jpg" data-lightbox="gotan"></a>
+                <a href="./locali/gotan06.jpg" data-lightbox="gotan"></a>
+            </div>
+            <div>
+                <div class="center-text">
+                    <img src="tangoloft-logo.png">
+                </div>
+                <div class="didascalie">
+                    Luci soffuse, ambiente caldo ed elegante, un loft post-industriale nel cuore pulsante di Roma,
+                    ristrutturato e trasformato in un salotto del tango e dell’arte in tutte le sue forme.
+                    Tango Loft è disponibile anche per workshop, corsi ed eventi privati.
+                </div>
+            </div>
+            <div>
+                <div class="center-text">
+                    <img src="unla-logo.png">
+                </div>
+                <div class="didascalie">
+                    Educazione<br /> formazione professionale <br />formazione amatoriale<br /> nell’ambito delle discipline artistiche e dello spettacolo.
+                </div>
+            </div>
         </div>
-    </div>
+        </div>
 
     <footer class="site-footer" id="foot">
         <hr>
@@ -189,7 +221,7 @@
     </footer>
 
 
-
+    <script src="./lightbox2-2.11.3/dist/js/lightbox-plus-jquery.js"></script>
     <script src="fittext.js"></script>
     <script type="text/javascript">
 
