--- a/index.html
+++ b/index.html
@@ -105,91 +105,192 @@
     </div>
     <hr style="margin: 0; border-color: red;" />
     <div class="third">
-        <hr class="my-hr-1" style="margin-top: 5%;">
-        <div class="titles">Conosci il nostro Team</div>
-        <div class="center-text">''Un pezzetto di Buenos Aires'' Tutto comincia facendo il primo passo... <br />Maestri, Staff ed allievi avanzati ci aiutano a seguire ogni uno di voi</div>
-        <hr class="my-hr-1" style="margin-bottom: 5%;">
-        <div class="grid-container-card">
-            <div style="display: flex; justify-content: center; align-items: center;">
-                <img src="./francesca.png" />
+        <div class="black-div">
+            <div style="padding-top: 3%;">
+                <hr class="my-hr-1">
             </div>
-            <div>
-                <div class="titles">Francesca del Buono</div>
-                MAESTRA E BALLERINA DI TANGO ARGENTINO<br />
-                Francesca Del Buono, una bellissima ed affermata ballerina di Tango, nota a Roma anche come maestra ma aprezzata anche a livello nazionale e internazionale per le sue performaces con il suo compagno Santiago Castro. Si forma in ambito classico, poi approfondisce i suoi studi sul Tango che diventa una passione che la porta a spaziare tra i vari stili ed innovazioni. Elegantissima e affascinate nel ballo che riesce a coinvolgere lo spettatore.
-                <br />
-                <a class="link" href="#">Scopri di più..</a>
+            <div class="titles">Conosci il nostro Team</div>
+            <div class="center-text">''Un pezzetto di Buenos Aires'' Tutto comincia facendo il primo passo... <br />Maestri, Staff ed allievi avanzati ci aiutano a seguire ogni uno di voi</div>
+            <div style="padding-top: 3%;">
+                <hr class="my-hr-1">
             </div>
-        </div>
-        <div class="grid-container-card">
-            <div>
-                <div class="titles">Santiago Castro</div>
-                MAESTRO E BALLERINO DI TANGO ARGENTINO<br />
-                Milonguero perché il tango è la mia vita, non posso passare una giornata senza ascoltarlo e ballare, mi piace il tango di abbraccio chiuso che viene ballato nelle milonghe del mondo.
-                Mi piace improvvisare il tango come la coreografia, conoscere il corpo, l'energia e i sentimenti che possiamo trasmettere ed esprimere con il nostro essere.
-                La mia filosofia è saper camminare, abbracciare e ascoltare, l piacere di ballare e l’amore per l’insegnamento.
-                <br />
-                <a class="link" href="#">Scopri di più..</a>
+            <div class="grid-container-card">
+                <div style="display: flex; justify-content: center; align-items: center;">
+                    <img src="./francesca.png" />
+                </div>
+                <div>
+                    <div class="titles">Francesca del Buono</div>
+                    MAESTRA E BALLERINA DI TANGO ARGENTINO<br />
+                    Francesca Del Buono, una bellissima ed affermata ballerina di Tango, nota a Roma anche come maestra ma aprezzata anche a livello nazionale e internazionale per le sue performaces con il suo compagno Santiago Castro. Si forma in ambito classico, poi approfondisce i suoi studi sul Tango che diventa una passione che la porta a spaziare tra i vari stili ed innovazioni. Elegantissima e affascinate nel ballo che riesce a coinvolgere lo spettatore.
+                    <br />
+                    <a class="link" href="#">Scopri di più..</a>
+                </div>
+            </div>
+            <div class="grid-container-card">
+                <div>
+                    <div class="titles">Santiago Castro</div>
+                    MAESTRO E BALLERINO DI TANGO ARGENTINO<br />
+                    Milonguero perché il tango è la mia vita, non posso passare una giornata senza ascoltarlo e ballare, mi piace il tango di abbraccio chiuso che viene ballato nelle milonghe del mondo.
+                    Mi piace improvvisare il tango come la coreografia, conoscere il corpo, l'energia e i sentimenti che possiamo trasmettere ed esprimere con il nostro essere.
+                    La mia filosofia è saper camminare, abbracciare e ascoltare, l piacere di ballare e l’amore per l’insegnamento.
+                    <br />
+                    <a class="link" href="#">Scopri di più..</a>
 
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center;">
+                    <img src="./santiago.png" style="display: flex; justify-content: center; align-items: center;" />
+                </div>
             </div>
-            <div style="display: flex; justify-content: center; align-items: center;">
-                <img src="./santiago.png" style="display: flex; justify-content: center; align-items: center;" />
-            </div>
-        </div>
-        <div class="grid-container-card">
-            <div style="display: flex; justify-content: center; align-items: center;">
-                <img src="./staff.png" style="display: flex; justify-content: center; align-items: center;" />
-            </div>
+            <div class="grid-container-card">
+                <div style="display: flex; justify-content: center; align-items: center;">
+                    <img src="./staff.png" style="display: flex; justify-content: center; align-items: center;" />
+                </div>
 
-            <div>
-                <div class="titles">Lo staff</div>
-                GLI ASSISTENTI DELLA ACCADEMIA NATANGO<br />
-                Lo Staff della Nuova Accademia del Tango coadiuva il lavoro dei maestri assistendovi durante le lezioni e durante le pratiche.
-                <br />
-                <a class="link" href="#">Scopri di più..</a>
+                <div>
+                    <div class="titles">Lo staff</div>
+                    GLI ASSISTENTI DELLA ACCADEMIA NATANGO<br />
+                    Lo Staff della Nuova Accademia del Tango coadiuva il lavoro dei maestri assistendovi durante le lezioni e durante le pratiche.
+                    <br />
+                    <a class="link" href="#">Scopri di più..</a>
+                </div>
             </div>
         </div>
     </div>
     <hr style="margin: 0; border-color: red;" />
     <div class="fourth">
-        <div class="grid-container-three">
-            <div>
-                <div class="center-text">
-                    <img src="gotan-logo.png">
+        <div class="black-div">
+            <div style="padding-top: 3%;">
+                <hr class="my-hr-1">
+            </div>
+            <div class="titles">Le nostre sedi</div>
+            <div class="center-text">Vieni a scoprire insieme a noi i luoghi dove, insieme a te viviamo il tango</div>
+            <div style="padding-top: 3%;">
+                <hr class="my-hr-1">
+            </div>
+
+
+            <div class="grid-container-three" style="margin-bottom: 0;">
+                <div>
+                    <div class="center-text">
+                        <img src="gotan-logo.png">
+                    </div>
+                    <div class="didascalie">
+                        Le nostre sale sono disponibili per corsi, attività artistiche ed eventi privati.<br />
+                        Contattateci per scoprire gli spazi e il programma delle attività, oppure per proporre le vostre idee!<br />
+                        Info: 3293593147 – 067825384
+                    </div>
                 </div>
-                <div class="didascalie">
-                    Le nostre sale sono disponibili per corsi, attività artistiche ed eventi privati.<br />
-                    Contattateci per scoprire gli spazi e il programma delle attività, oppure per proporre le vostre idee!<br />
-                    Info: 3293593147 – 067825384
+                <div>
+                    <div class="center-text">
+                        <img src="tangoloft-logo.png">
+                    </div>
+                    <div class="didascalie">
+                        Luci soffuse, ambiente caldo ed elegante, un loft post-industriale nel cuore pulsante di Roma,
+                        ristrutturato e trasformato in un salotto del tango e dell’arte in tutte le sue forme.
+                        Tango Loft è disponibile anche per workshop, corsi ed eventi privati.
+                    </div>
+
+                </div>
+                <div>
+                    <div class="center-text">
+                        <img src="unla-logo.png">
+                    </div>
+                    <div class="didascalie">
+                        Educazione<br /> formazione professionale <br />formazione amatoriale<br /> nell’ambito delle discipline artistiche e dello spettacolo.</br>Un luogo dove vivere inisieme anoi il tango a 360 gradi.
+                    </div>
+                </div>
+            </div>
+            <div class="grid-container-three" style="margin-top: 0;">
+                <div>
+                    <div class="grid-container-location">
+                        <a href="./locali/gotan01.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan01.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/gotan02.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan02.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/gotan03.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan03.jpg" class="gallery-img">
+                        </a>
+                    </div>
+
+                    <div class="grid-container-location">
+                        <a href="./locali/gotan04.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan04.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/gotan02.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan05.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/gotan03.jpg" data-lightbox="gotan">
+                            <img src="./locali/gotan06.jpg" class="gallery-img">
+                        </a>
+                    </div>
                 </div>
 
-                <a href="./locali/gotan01.jpg" data-lightbox="gotan"><img src="./locali/gotan01.jpg"></a>
-                <a href="./locali/gotan02.jpg" data-lightbox="gotan"></a>
-                <a href="./locali/gotan03.jpg" data-lightbox="gotan"></a>
-                <a href="./locali/gotan04.jpg" data-lightbox="gotan"></a>
-                <a href="./locali/gotan05.jpg" data-lightbox="gotan"></a>
-                <a href="./locali/gotan06.jpg" data-lightbox="gotan"></a>
-            </div>
-            <div>
-                <div class="center-text">
-                    <img src="tangoloft-logo.png">
+                <div>
+                    <div class="grid-container-location">
+                        <a href="./locali/tangoloft04.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft04.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/tangoloft05.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft05.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/tangoloft06.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft06.jpg" class="gallery-img">
+                        </a>
+                    </div>
+
+                    <div class="grid-container-location">
+                        <a href="./locali/tangoloft07.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft07.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/tangoloft08.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft08.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/tangoloft09.jpg" data-lightbox="tangoloft">
+                            <img src="./locali/tangoloft09.jpg" class="gallery-img">
+                        </a>
+                    </div>
+                    <a href="./locali/tangoloft01.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft02.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft03.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft10.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft11.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft12.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft13.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft14.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft15.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft16.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft17.jpg" data-lightbox="tangoloft"></a>
+                    <a href="./locali/tangoloft18.jpg" data-lightbox="tangoloft"></a>
+
                 </div>
-                <div class="didascalie">
-                    Luci soffuse, ambiente caldo ed elegante, un loft post-industriale nel cuore pulsante di Roma,
-                    ristrutturato e trasformato in un salotto del tango e dell’arte in tutte le sue forme.
-                    Tango Loft è disponibile anche per workshop, corsi ed eventi privati.
+
+                <div>
+                    <div class="grid-container-location">
+                        <a href="./locali/unla01.jpg" data-lightbox="unla">
+                            <img src="./locali/unla01.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/unla02.jpg" data-lightbox="unla">
+                            <img src="./locali/unla02.jpg" class="gallery-img">
+                        </a>
+                        <a href="./locali/unla03.jpg" data-lightbox="unla">
+                            <img src="./locali/unla03.jpg" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="grid-container-location">
+                        <a href="./locali/unla04.jpg" data-lightbox="unla">
+                            <img src="./locali/unla04.jpg" class="gallery-img">
+                        </a>
+                    </div>
+
                 </div>
-            </div>
-            <div>
-                <div class="center-text">
-                    <img src="unla-logo.png">
-                </div>
-                <div class="didascalie">
-                    Educazione<br /> formazione professionale <br />formazione amatoriale<br /> nell’ambito delle discipline artistiche e dello spettacolo.
-                </div>
+
             </div>
         </div>
-        </div>
+    </div>
+    <hr style="margin: 0; border-color: red;" />
+
 
     <footer class="site-footer" id="foot">
         <hr>
